@@ -1,23 +1,27 @@
 # taskmaster
 
-taskmaster is a simple command-line application for managing tasks. It supports adding, listing, marking, unmarking, and deleting tasks. Tasks can be of three types: ToDo, Deadline, and Event.
+TaskMaster is a simple task management application with a GUI built using JavaFX. It allows users to add, list, mark, unmark, delete tasks, and more.
 
 ## Features
 
-- Add tasks (ToDo, Deadline, Event)
-- List all tasks
-- Mark tasks as done
-- Unmark tasks as not done
-- Delete tasks
-- Display help message
-- Agenda: View tasks due on a specific date
-- Supports multiple date formats (e.g., `d/M/yyyy HHmm`, `d-M-yyyy HHmm`, ISO format)
+- **Add Tasks**: Supports three task types - `ToDo`, `Deadline`, and `Event`
+- **List All Tasks**: View all tasks in a formatted list
+- **Mark Tasks as Done**: Easily mark tasks as completed
+- **Unmark Tasks**: Undo completion status
+- **Delete Tasks**: Remove tasks from the list
+- **Agenda View**: View tasks due on a specific date
+- **Find Tasks**: Search for tasks by keyword
+- **Resizable GUI**: Modern UI with JavaFX, resizable for better readability
+- **Profile Pictures**: Customizable display for chatbot interactions
+- **Persistent Storage**: Tasks are saved locally and loaded on startup
+- **Help Command**: Displays a guide on available commands
 
 ## Getting Started
 
 ### Prerequisites
 
-- Java Development Kit (JDK) 11 or higher
+- Java Development Kit (JDK) 17 or higher
+- JavaFX 17+ (if running manually)
 
 ### Installation
 
@@ -32,13 +36,20 @@ taskmaster is a simple command-line application for managing tasks. It supports 
 
 ### Running the Application
 
-1. Compile the Java files:
+#### Using Gradle
+1. Compile and run:
     ```sh
-    javac -d bin src/taskmaster/java/taskmaster/*.java
+    ./gradlew run
+    ```
+
+#### Running Manually
+1. Compile Java files:
+    ```sh
+    javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -d bin src/taskmaster/Main.java
     ```
 2. Run the application:
     ```sh
-    java -cp bin taskmaster.taskmaster
+    java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -cp bin taskmaster.Main
     ```
 
 ## Usage
@@ -53,10 +64,11 @@ taskmaster is a simple command-line application for managing tasks. It supports 
 - `unmark INDEX` - Marks task #INDEX as not done
 - `delete INDEX` - Deletes task #INDEX
 - `agenda DATE` - Lists all tasks due on the specified date (e.g., `agenda 02/12/2019`)
+- `find KEYWORD` - Searches for tasks containing the keyword (e.g., `find book`)
 - `help` - Shows the help message
 - `bye` - Exits taskmaster
 
-### Example
+### Example Usage
 
 ```sh
 > todo borrow book
@@ -66,7 +78,7 @@ Now you have 1 task in the list.
 
 > list
 Here are the tasks in your list:
-1.[T][ ] borrow book
+1. [T][ ] borrow book
 
 > deadline return book /by 02/12/2019 1800
 Got it. I've added this task:
@@ -80,5 +92,16 @@ Now you have 3 tasks in the list.
 
 > agenda 02/12/2019
 Here are the tasks on 02/12/2019:
-1.[D][ ] return book (by: 02/12/2019 1800)
-2.[E][ ] project meeting (from: 02/12/2019 0900 to: 02/12/2019 1100)
+1. [D][ ] return book (by: 02/12/2019 1800)
+2. [E][ ] project meeting (from: 02/12/2019 0900 to: 02/12/2019 1100)
+
+> find book
+Here are the matching tasks in your list:
+1. [T][ ] borrow book
+2. [D][ ] return book (by: 02/12/2019 1800)
+
+> help
+Displays the list of commands
+
+> bye
+Goodbye! Hope to see you again soon.
